backend/hrmanagement/k8s/infra/ingress/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller

  ports:
    - name: http
      port: 80
      targetPort: http

    - name: https
      port: 443
      targetPort: https
