backend/hrmanagement/k8s/infra/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress
  namespace: hrmanagement

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000
